--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 
       <div>
         <img id="icon" width="50px" height="50px"
-          src="https://cdn-icons.flaticon.com/png/512/1442/premium/1442581.png?token=exp=1635366142~hmac=fdb39f368cadd69a1d5121d025c521f0"
+          src="Icon/programming.png"
           alt="" class="mx-auto d-block">
       </div>
     </div>
@@ -92,7 +92,7 @@
             <img height="50px" width="55px" src="https://cdn-icons-png.flaticon.com/512/136/136528.png" alt="">
           </ul>
           <ul><img height="50px" width="45px"
-              src="https://cdn-icons.flaticon.com/png/512/1045/premium/1045906.png?token=exp=1635366622~hmac=6bfb521a0cae124c2689d8dedbbc968c"
+              src="Icon/css.png"
               alt=""></ul>
           <ul><img height="50px" width="55px" src="https://cdn-icons-png.flaticon.com/512/136/136530.png" alt=""></ul>
           <ul><img height="50px" width="60px" src="https://i.stack.imgur.com/C9301.png" alt=""></ul>
@@ -113,7 +113,7 @@
         </div>
         <div>
           <img id="icon" width="50px" height="50px"
-            src="https://cdn-icons.flaticon.com/png/512/1442/premium/1442581.png?token=exp=1635366142~hmac=fdb39f368cadd69a1d5121d025c521f0"
+            src="Icon/programming.png"
             alt="" class="mx-auto d-block">
         </div>
       </div>
